fixed some layout issues

--- a/css/banner.css
+++ b/css/banner.css
@@ -1,7 +1,7 @@
 @import url(./varaibles.css);
 
 .intro_section {
-    padding-top: 15rem;
+    padding-top: 10rem;
     padding-bottom: 5rem;
     text-align: center;
     cursor:url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg'  width='50' height='60' viewport='0 0 100 100' style='fill:black;font-size:30px;'><text y='50%'>📧</text></svg>") 16 0,auto; /*!emojicursor.app*/
